--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "osc-js": "^2.4.1",
+    "serialport": "^12.0.0",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
